Something new in February 2014
- Bitmap operation helper in V2AndLib-media library
- File cache helper
- LAME wrapper
- DataStreamWrapper - New helper class DataStreamWrapper - helps to open input stream for different resources
- New Class AndroidAccountHelper - helps to operate with system accounts & SyncAdapter

December 2013
- Updated for Gradle 1.9 Android plugin 0.7.1

October 2013
- code base was separeted between few sub-projects

September 2013
- updated CameraView - now it is support video recording.
- update BaseSettings - new field for user profile.

August 2013
- System tricks class. Method to enable/disable data connection over Mobile network.

March 2013
- TimePickerDialogFragment
- MessageDateFormatter - allows you to convert a date to a readable string (eg "20 minutes ago", "3 hours ago", etc.) 
- ActionBarSherlock now are used in API10 branch

January 2013
- BackLoadingAdapter inheritors now can use custom load indicator

Something new in December 2012
- com.v2soft.AndLib.ui.fonts.FontMager - class for managing custom application fonts
- com.v2soft.AndLib.ui.views.TextViewWithFont - TextView inhariter that allows to change font
- com.v2soft.AndLib.ui.animations.SimpleAnimationUtils - helper class for animations
- com.v2soft.AndLib.ui.dataproviders.TaskExecutorLoader - Loader that can be used to execute ITask objects.