@@ -1,3 +1,6 @@
+Something new in March 2014
+- SpeedControlInputStream was added to library
+
 Something new in February 2014
 - Bitmap operation helper in V2AndLib-media library
 - File cache helper
